--- a/wallettemplate/src/main/resources/wallettemplate/main.fxml
+++ b/wallettemplate/src/main/resources/wallettemplate/main.fxml
@@ -36,7 +36,7 @@
     </HBox>
     <HBox fx:id="controlsBox" alignment="TOP_LEFT" fillHeight="true" layoutX="14.0" layoutY="347.0" minHeight="16.0" prefHeight="36.0" prefWidth="243.0" spacing="10.0" translateY="60.0" visible="true" AnchorPane.bottomAnchor="17.0">
       <children>
-        <Button defaultButton="true" mnemonicParsing="false" styleClass="fat-button" text="Primary" />
+        <Button fx:id="scanBtn" onAction="#scanClicked" defaultButton="true" mnemonicParsing="false" styleClass="fat-button" text="Scan &amp; broadcast signed Tx" />
         <Button cancelButton="true" mnemonicParsing="false" styleClass="fat-button" text="Secondary" />
       </children>
     </HBox>
