--- a/wallettemplate/src/main/resources/wallettemplate/send_money.fxml
+++ b/wallettemplate/src/main/resources/wallettemplate/send_money.fxml
@@ -46,8 +46,8 @@
         <HBox alignment="CENTER_RIGHT" fillHeight="true" prefHeight="30.0" prefWidth="600.0" spacing="15.0" VBox.vgrow="NEVER">
           <children>
             <Button fx:id="cancelBtn" cancelButton="true" mnemonicParsing="false" onAction="#cancel" prefWidth="79.0" text="Cancel" />
-            <Button fx:id="signBtn" mnemonicParsing="false" onAction="#sign" prefWidth="90.0" text="Airgap Sign" />
-            <Button fx:id="sendBtn" defaultButton="true" mnemonicParsing="false" onAction="#send" prefWidth="79.0" text="Send" />
+            <Button fx:id="signBtn" disable="true" mnemonicParsing="false" onAction="#sign" prefWidth="90.0" text="Sign" />
+            <Button fx:id="sendBtn" defaultButton="true" disable="true" mnemonicParsing="false" onAction="#send" prefWidth="79.0" text="Send" />
           </children>
         </HBox>
       </children>
