--- a/bitcoinj-walletfx-template/src/main/resources/wallettemplate/main.fxml
+++ b/bitcoinj-walletfx-template/src/main/resources/wallettemplate/main.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.effect.BoxBlur?>
-<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -42,16 +40,9 @@
         <Button cancelButton="true" mnemonicParsing="false" styleClass="fat-button" text="Secondary" />
       </children>
     </HBox>
-    <ImageView fitHeight="243.0" fitWidth="243.0" opacity="0.28" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-36.0" AnchorPane.rightAnchor="-34.0">
-      <effect>
-        <ColorAdjust>
-          <input>
-            <BoxBlur height="20.0" width="20.0" />
-          </input>
-        </ColorAdjust>
-      </effect>
+    <ImageView fitHeight="194.0" fitWidth="243.0" layoutX="543.0" layoutY="381.0" opacity="0.93" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="9.25" AnchorPane.rightAnchor="14.0">
       <image>
-        <Image url="@bitcoin_logo_plain.png" />
+        <Image url="@bitcoinjlogo.png" />
       </image>
     </ImageView>
     <ClickableBitcoinAddress fx:id="addressControl" layoutY="45.0" prefHeight="21.0" prefWidth="391.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="195.0" />
